src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-ofT-dwP0.25-dhP0.5-b.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: P0.5\nborder on"
expression: snapshot
---
initial configure:
size: 312 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
